app/styles/_variables.less
@font-path: "../styles/fonts";
@font-path-trailing-slash: "/";
@fa-font-path: @font-path;
@icon-font-path: "@{font-path}@{font-path-trailing-slash}"; // Bootstrap glyphicons
@image-path: "../images";

// Icons
@pficon-var-error-circle-o: '\e61d';
@pficon-var-info: '\e604';
@pficon-var-ok: '\e602';
@pficon-var-warning-triangle-o: '\e61c';

// Patternfly overrides
@dropdown-divider-margin: 4px 0;
@list-view-hover-bg: #fafafa;
@navbar-pf-alt-navbar-brand-padding: 20px 0;
@navbar-pf-bg-color: @navbar-os-bg-color;
@sidebar-pf-bg: @body-bg;
@table-cell-padding-bottom: 8px;
@table-cell-padding-top: 8px;


// OpenShift Console specific
@openshift-logo-color: #cd202c;
@action-link-inline-margin: 5px;
@animate-default-speed: 300ms;
@border-color-light-grey: #ddd;
@border-radius-lg: 13px;
@border-radius-md: 5px;
@border-radius-sm: 3px;
@btn-flat-bg: #f7f7f7;
@btn-flat-border-color: #e7e7e7;
@component-label: 11px;
@connector-color: #e0e0e0;
@console-panel-color: #fff;
@console-bright-blue: #00a8e1;
@console-dark-blue: #006e9c;
@console-text-color-default: @gray-dark;
@easeInCubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
@easeOutCubic: cubic-bezier(0.215, 0.61, 0.355, 1);
@font-size-base: 13px;
@link-hover-color-bright: lighten(@link-color, 13%);
@list-view-expanded-bg: #f5f5f5;
@log-bg-color: #101214;
// The log viewer needs to be udpated if this value changes.  It accounts for
// bottom margin when resizing the log in JavaScript.
@middle-content-bottom-margin: @grid-gutter-width;
@navbar-header-offset: 2px;
@navbar-os-header-height-desktop: 60px;
@navbar-os-header-height-mobile: 46px;
@navbar-os-bg-color: #292e34;
@navbar-os-label-filter-bg: @navbar-os-project-menu-bg;
@navbar-os-project-bg: @navbar-os-bg-color;
@navbar-os-project-menu-active-bg: darken(@navbar-os-bg-color, 5%);
@navbar-os-project-menu-active-color: @sidebar-os-active-color;
@navbar-os-project-border-color: @sidebar-os-border-color;
@navbar-os-project-menu-bg: @navbar-os-bg-color;
@navbar-os-project-menu-border: @sidebar-os-border-color;
@navbar-os-project-menu-color: @sidebar-os-color;
@navbar-os-project-menu-hover-bg: @sidebar-os-active-bg;
@navbar-project-label-color: @sidebar-os-color;
@osc-object-active-color: @console-bright-blue;
@osc-object-hover-color: rgba(0, 168, 225, 0.5);
@osc-object-box-shadow: 0 0 0 1px @connector-color;
@panel-shaded: #f2f2f2;
@panel-light: @body-bg;
@pod-failed-bg: #EEECEC;
@pod-failed-border: 2px solid @brand-danger;
@pod-running-bg: #E4F5BC;
@pod-pending-bg: #e8e8e8;
@pod-warning-bg: #f9d67a;
@sidebar-os-bg: #30363d;
@sidebar-os-color: #dbdada;
@sidebar-os-active-bg: #383f47;
@sidebar-os-active-color: lighten(@sidebar-os-color, 13%);
@sidebar-os-border-color: #050505; // #1a1d21
@sidebar-os-border-inset-color: rgba(255,255,255,.04);
@sidebar-os-dropdown-link-active-bg: lighten(@sidebar-os-active-bg, 5%);
@sidebar-os-dropdown-link-active-hover-bg: lighten(@sidebar-os-active-bg, 9%);
@sidebar-os-dropdown-link-hover-bg: lighten(@sidebar-os-hover-bg, 4%);
@sidebar-os-hover-bg: #3f4750;
@sidebar-os-icon-color: rgba(200,200,200, .8);
@sidebar-os-padding-x: 20px;
@sidebar-os-padding-x-secondary: 37px;
@sidebar-os-padding-y: 15px;
@sidebar-os-active: @console-bright-blue;
@sidebar-left-mobile: 250px;
@sidebar-left-width-lg: 210px;
@sidebar-left-width-md: 145px;
@sidebar-right-width-xlg: 480px;
@sidebar-right-width-lg: 400px;
@sidebar-right-width-md: 310px;
@sidebar-right-width-sm: 210px;
@screen-height-sm: 600px;
@screen-lg-max: (@screen-xlg-min - 1);
@screen-xlg-min: 1600px;
@screen-xs: 480px;
@screen-xs-min: @screen-xs;
@screen-xxs-max: (@screen-xs-min - 1);
@scrollbar-thumb: rgba(0,0,0,.08);
@scrollbar-thumb-inverse: rgba(255,255,255,.25);
@scrollbar-thumb-hover: rgba(0,0,0,.18);
@scrollbar-thumb-hover-inverse: rgba(255,255,255,.35);
@scrollbar-track: rgba(0,0,0,.03);
@scrollbar-track-inverse: @sidebar-os-border-color;
@scrollbar-track-inverse-alt: rgba(255,255,255,.1);
@scrollbar-width: 14px;
@scrollbar-width-log-viewer: 17px;
@status-bg-color: #E6ECF1;
@status-border-color: #BFCEDB;
@tileHeadingIconFontSize: 33px;
@tooltip-bg: #111;

// Bootstrap overrides
@body-bg: #fff;
@page-header-border-color: #e4e4e4;

@font-size-h1: ceil(@font-size-base * 1.84); // ~24px
@font-size-h2: ceil(@font-size-base * 1.4); // ~19px
@font-size-h3: ceil(@font-size-base * 1.22); // ~16px
@font-size-h4: ceil(@font-size-base * 1.047); // ~14px
@font-size-h5: @font-size-base; // ~13px
@font-size-large: ceil(@font-size-base * 1.1); // ~15px
@font-size-small: ceil(@font-size-base * .83); // ~11px
@font-size-xsmall: ceil(@font-size-base * .75); // ~10px
@font-size-xxsmall: ceil(@font-size-base * .68); // ~9px
@line-height-base: 1.66666667; // 20/12

@dl-horizontal-breakpoint: 415px;

@modal-md: 640px; // make the medium size modal a little bigger

